Updated the README to reflect the name change.

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-== SocialContactCenter
+== SocialQ
 
 === Overview
 This is a prototype backend application to power a Social Contact Center with Twitter and Tropo.
